Form provided interface
AB#68

--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -92,5 +92,30 @@
     "customBusinessCapabilities_hasntBeenRemoved": "business capability has not been removed with success",
     "customBusinessCapabilities_selectAnExistingOneOrCreateANewOne": "Select an existing business capability or create a new business capability.",
     "customBusinessCapabilities": "Business capabilities",
-    "customBusinessCapability": "business capability"
+    "customBusinessCapability": "business capability",
+
+    "application_providedInterfaces_name": "Name",
+    "application_providedInterfaces_providedInterfaces": "Interface fournis",
+    "application_providedInterfaces_description": "Description",
+    "application_providedInterfaces_incoming": "Incoming",
+    "application_providedInterfaces_directionIncomingDescription": "Data flow from consumers'interface to application {{ name }}.",
+    "application_providedInterfaces_directionOutgoingDescription": "Data flow from application {{ name }} to consumers'interface.",
+    "application_providedInterfaces_directionBiDirectionalDescription": "Data flow with incoming and ougoing behavior.",
+    "application_providedInterfaces_outgoing": "Outgoing",
+    "application_providedInterfaces_biDirectional": "Bi-directional",
+    "application_providedInterfaces_directionPlaceholder": "Select direction",
+    "application_providedInterfaces_direction": "Direction",
+    "application_providedInterfaces_volumetry": "Volumetry",
+    "application_providedInterfaces_frequence": "frequence",
+    "application_providedInterfaces_daily": "Daily",
+    "application_providedInterfaces_hourly": "Hourly",
+    "application_providedInterfaces_weekly": "Weekly",
+    "application_providedInterfaces_monthly": "Monthly",
+    "application_providedInterfaces_yearly": "Yearly",
+    "application_providedInterfaces_onDemand": "On demand",
+    "application_providedInterfaces_realTime": "real-time",
+    "application_providedInterfaces_interfaceHasBeenAdded": "Interface has been added.",
+    "application_providedInterfaces_interfaceHasNotBeenAdded": "Interface hasn't been added.",
+    "application_providedInterfaces_provideANewInterface": "Provide a new interface",
+    "application_providedInterfaces_provideANewInterfaceDescription": "Create a new interface provide by application {{ name }}"
 }
