--- a/src/app/i18n/locales/fr/translation.json
+++ b/src/app/i18n/locales/fr/translation.json
@@ -92,5 +92,31 @@
     "customBusinessCapabilities_hasntBeenRemoved": "La business capability n'a pas été supprimée avec succès",
     "customBusinessCapabilities_selectAnExistingOneOrCreateANewOne": "Sélectionnez une business capability existante ou créez une nouvel business capability.",
     "customBusinessCapabilities": "Business capabilities",    
-    "customBusinessCapability": "business capability"
+    "customBusinessCapability": "business capability",
+
+    "application_providedInterfaces_name": "Nom",
+    "application_providedInterfaces_providedInterfaces": "Interfaces exposées",
+    "application_providedInterfaces_description": "Description",
+    "application_providedInterfaces_incoming": "Entrant",
+    "application_providedInterfaces_outgoing": "Sortant",
+    "application_providedInterfaces_directionIncomingDescription": "Data flow depuis les clients de l'interface vers l'application {{ name }}.",
+    "application_providedInterfaces_directionOutgoingDescription": "Data flow depuis l'application {{ name }} vers les clients de l'interface.",
+    "application_providedInterfaces_directionBiDirectionalDescription": "Data flow avec les comportements des directions 'entrant' et 'sortant'.",
+    "application_providedInterfaces_biDirectional": "Bidirectionnel",
+    "application_providedInterfaces_directionPlaceholder": "Sélectionner direction",
+    "application_providedInterfaces_direction": "Direction",
+    "application_providedInterfaces_volumetry": "Volumétrie",
+    "application_providedInterfaces_frequence": "Fréquence",
+    "application_providedInterfaces_frequencePlaceholder": "Fréquence",
+    "application_providedInterfaces_daily": "Quotidienne",
+    "application_providedInterfaces_hourly": "Horaire",
+    "application_providedInterfaces_weekly": "Hebdomadaire",
+    "application_providedInterfaces_monthly": "Mensuelle",
+    "application_providedInterfaces_yearly": "Annuelle",
+    "application_providedInterfaces_onDemand": "A la demande",
+    "application_providedInterfaces_realTime": "Temps réel",
+    "application_providedInterfaces_interfaceHasBeenAdded": "L'interface a été ajoutée.",
+    "application_providedInterfaces_interfaceHasNotBeenAdded": "L'interface n'a pas été ajoutée.",
+    "application_providedInterfaces_provideANewInterface": "Exposer une nouvelle interface",
+    "application_providedInterfaces_provideANewInterfaceDescription": "Créer une nouvelle interface exposée par l'application {{ name }}"
 }
