--- a/src/app/i18n/locales/fr/translation.json
+++ b/src/app/i18n/locales/fr/translation.json
@@ -18,6 +18,7 @@
     "common_selectAll": "Tout sélectionner",
     "common_clear": "Vider",
     "common_close": "Fermer",
+    "common_columns": "Colonnes",
 
     "dashboard_home_myApplications": "Mes applications",
     "dashboard_home_newApplication": "Nouvelle application",
