improve interfaces data table
AB#68

--- a/src/app/i18n/locales/fr/translation.json
+++ b/src/app/i18n/locales/fr/translation.json
@@ -19,6 +19,19 @@
     "common_clear": "Vider",
     "common_close": "Fermer",
     "common_columns": "Colonnes",
+    "common_reset": "reset",
+    "common_desc": "Desc",
+    "common_asc": "Asc",
+    "common_hide": "Masquer",
+    "common_noResults": "Aucun résultat.",
+    "common_view": "Affichage",
+    "common_toggleColumns": "Affichage colonnes",
+    "common_rowsPerPage": "Lignes par page",
+    "common_pageNOfM" : "Page {{ pageIndex }} sur {{ totalPage }}",
+    "common_goToFirstPage": "Aller à la première page",
+    "common_goToPreviousPage": "Aller à la page précédente",
+    "common_goToNextPage": "Aller à la page suivante",
+    "common_goToLastPage": "Aller à la dernière page",
 
     "dashboard_home_myApplications": "Mes applications",
     "dashboard_home_newApplication": "Nouvelle application",
@@ -52,7 +65,7 @@
     "application_parentApplication_parentApplicationHasBeenRemoved": "L'application parent a bien été supprimée.",
     "application_parentApplication_parentApplicationHasNotBeenRemoved": "L'application parent n'a pas pu être supprimée.",
     "application_parentApplication_removeTheParentApplication": "Supprimer l'application parente",
-    "application_providedInterfaces_addConsumer": "Ajouter un consommateur",
+    "application_ownedInterfaces_addConsumer": "Ajouter un consommateur",
 
     "application_childrenApplication_childrenApplication": "Applications enfants",
     "application_childrenApplication_addChildrenApplication": "Ajouter des applications enfants",
@@ -112,32 +125,33 @@
     "customItComponents_selectExisting": "Selectionner un It Component existant",
     "customItComponents_select": "Selectionner it component", 
 
-    "application_providedInterfaces_name": "Nom",
-    "application_providedInterfaces_providedInterfaces": "Interfaces exposées",
-    "application_providedInterfaces_description": "Description",
-    "application_providedInterfaces_incoming": "Entrant",
-    "application_providedInterfaces_outgoing": "Sortant",
-    "application_providedInterfaces_directionIncomingDescription": "Data flow depuis les clients de l'interface vers l'application {{ name }}.",
-    "application_providedInterfaces_directionOutgoingDescription": "Data flow depuis l'application {{ name }} vers les clients de l'interface.",
-    "application_providedInterfaces_directionBiDirectionalDescription": "Data flow avec les comportements des directions 'entrant' et 'sortant'.",
-    "application_providedInterfaces_biDirectional": "Bidirectionnel",
-    "application_providedInterfaces_directionPlaceholder": "Sélectionner direction",
-    "application_providedInterfaces_direction": "Direction",
-    "application_providedInterfaces_volumetry": "Volumétrie",
-    "application_providedInterfaces_frequence": "Fréquence",
-    "application_providedInterfaces_frequencePlaceholder": "Fréquence",
-    "application_providedInterfaces_daily": "Quotidienne",
-    "application_providedInterfaces_hourly": "Horaire",
-    "application_providedInterfaces_weekly": "Hebdomadaire",
-    "application_providedInterfaces_monthly": "Mensuelle",
-    "application_providedInterfaces_yearly": "Annuelle",
-    "application_providedInterfaces_onDemand": "A la demande",
-    "application_providedInterfaces_realTime": "Temps réel",
-    "application_providedInterfaces_interfaceHasBeenAdded": "L'interface a été ajoutée.",
-    "application_providedInterfaces_interfaceHasNotBeenAdded": "L'interface n'a pas été ajoutée.",
-    "application_providedInterfaces_provideANewInterface": "Exposer une nouvelle interface",
-    "application_providedInterfaces_provideANewInterfaceDescription": "Créer une nouvelle interface exposée par l'application {{ name }}",
-    "application_providedInterfaces_updateInterface": "Modifier l'interface {{name}}",
-    "application_providedInterfaces_updateInterfaceDescription": "Modifier l'interface {{ interfaceName }} exposée par l'application {{ name }}",
-    "application_providedInterfaces_addInterface": "Ajouter une interface"
+    "application_ownedInterfaces_name": "Nom",
+    "application_ownedInterfaces_providedInterfaces": "Interfaces exposées",
+    "application_ownedInterfaces_description": "Description",
+    "application_ownedInterfaces_incoming": "Entrant",
+    "application_ownedInterfaces_outgoing": "Sortant",
+    "application_ownedInterfaces_directionIncomingDescription": "Data flow depuis les clients de l'interface vers l'application {{ name }}.",
+    "application_ownedInterfaces_directionOutgoingDescription": "Data flow depuis l'application {{ name }} vers les clients de l'interface.",
+    "application_ownedInterfaces_directionBiDirectionalDescription": "Data flow avec les comportements des directions 'entrant' et 'sortant'.",
+    "application_ownedInterfaces_biDirectional": "Bidirectionnel",
+    "application_ownedInterfaces_directionPlaceholder": "Sélectionner direction",
+    "application_ownedInterfaces_direction": "Direction",
+    "application_ownedInterfaces_volumetry": "Volumétrie",
+    "application_ownedInterfaces_frequence": "Fréquence",
+    "application_ownedInterfaces_frequencePlaceholder": "Fréquence",
+    "application_ownedInterfaces_daily": "Quotidienne",
+    "application_ownedInterfaces_hourly": "Horaire",
+    "application_ownedInterfaces_weekly": "Hebdomadaire",
+    "application_ownedInterfaces_monthly": "Mensuelle",
+    "application_ownedInterfaces_yearly": "Annuelle",
+    "application_ownedInterfaces_onDemand": "A la demande",
+    "application_ownedInterfaces_realTime": "Temps réel",
+    "application_ownedInterfaces_interfaceHasBeenAdded": "L'interface a été ajoutée.",
+    "application_ownedInterfaces_interfaceHasNotBeenAdded": "L'interface n'a pas été ajoutée.",
+    "application_ownedInterfaces_provideANewInterface": "Exposer une nouvelle interface",
+    "application_ownedInterfaces_provideANewInterfaceDescription": "Créer une nouvelle interface exposée par l'application {{ name }}",
+    "application_ownedInterfaces_updateInterface": "Modifier l'interface {{name}}",
+    "application_ownedInterfaces_updateInterfaceDescription": "Modifier l'interface {{ interfaceName }} exposée par l'application {{ name }}",
+    "application_ownedInterfaces_addInterface": "Ajouter une interface",
+    "application_ownedInterfaces_placeholderNameFilter": "Filtrer les interfaces..."
 }
