--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -19,6 +19,19 @@
     "common_clear": "Clear",
     "common_close": "Close",
     "common_columns": "Columns",
+    "common_reset": "reset",
+    "common_desc": "Desc",
+    "common_asc": "Asc",
+    "common_hide": "Hide",
+    "common_noResults": "No results.",
+    "common_view": "View",
+    "common_toggleColumns": "Toggle columns",
+    "common_rowsPerPage": "Rows per page",
+    "common_pageNOfM" : "Page {{ page }} of {{ totalPage }}",
+    "common_goToFirstPage": "Go to first page",
+    "common_goToPreviousPage": "Go to previous page",
+    "common_goToNextPage": "Go to next page",
+    "common_goToLastPage": "Go to last page",
 
     "dashboard_home_myApplications": "My applications",
     "dashboard_home_newApplication": "New application",
@@ -52,7 +65,7 @@
     "application_parentApplication_parentApplicationHasBeenRemoved": "Parent application has been removed.",
     "application_parentApplication_parentApplicationHasNotBeenRemoved": "Parent application hasn't been removed.",
     "application_parentApplication": "Remove parent application",
-    "application_providedInterfaces_addConsumer": "Add a consumer",
+    "application_ownedInterfaces_addConsumer": "Add a consumer",
 
     "application_childrenApplication_childrenApplication": "Children application",
     "application_childrenApplication_addChildrenApplication": "Add children applications",
@@ -112,33 +125,34 @@
     "customItComponents_selectExisting": "Select an existing it component",
     "customItComponents_select": "Select it component", 
 
-    "application_providedInterfaces_name": "Name",
-    "application_providedInterfaces_providedInterfaces": "Interface fournis",
-    "application_providedInterfaces_description": "Description",
-    "application_providedInterfaces_incoming": "Incoming",
-    "application_providedInterfaces_directionIncomingDescription": "Data flow from consumers'interface to application {{ name }}.",
-    "application_providedInterfaces_directionOutgoingDescription": "Data flow from application {{ name }} to consumers'interface.",
-    "application_providedInterfaces_directionBiDirectionalDescription": "Data flow with incoming and ougoing behavior.",
-    "application_providedInterfaces_outgoing": "Outgoing",
-    "application_providedInterfaces_biDirectional": "Bi-directional",
-    "application_providedInterfaces_directionPlaceholder": "Select direction",
-    "application_providedInterfaces_direction": "Direction",
-    "application_providedInterfaces_volumetry": "Volumetry",
-    "application_providedInterfaces_frequence": "frequence",
-    "application_providedInterfaces_daily": "Daily",
-    "application_providedInterfaces_hourly": "Hourly",
-    "application_providedInterfaces_weekly": "Weekly",
-    "application_providedInterfaces_monthly": "Monthly",
-    "application_providedInterfaces_yearly": "Yearly",
-    "application_providedInterfaces_onDemand": "On demand",
-    "application_providedInterfaces_realTime": "real-time",
-    "application_providedInterfaces_interfaceHasBeenAdded": "Interface has been added.",
-    "application_providedInterfaces_interfaceHasNotBeenAdded": "Interface hasn't been added.",
-    "application_providedInterfaces_provideANewInterface": "Provide a new interface",
-    "application_providedInterfaces_provideANewInterfaceDescription": "Create a new interface provide by application {{ name }}",
-    "application_providedInterfaces_updateInterface": "Update interface {{name}}",
-    "application_providedInterfaces_updateInterfaceDescription": "Update interface {{ interfaceName }} provide by application {{ name }}",
-    "application_providedInterfaces_addInterface": "Add interface",
-    "application_providedInterfaces_dataObject": "Data object",
-    "application_providedInterfaces_itComponent": "It component"
+    "application_ownedInterfaces_name": "Name",
+    "application_ownedInterfaces_providedInterfaces": "Interface fournis",
+    "application_ownedInterfaces_description": "Description",
+    "application_ownedInterfaces_incoming": "Incoming",
+    "application_ownedInterfaces_directionIncomingDescription": "Data flow from consumers'interface to application {{ name }}.",
+    "application_ownedInterfaces_directionOutgoingDescription": "Data flow from application {{ name }} to consumers'interface.",
+    "application_ownedInterfaces_directionBiDirectionalDescription": "Data flow with incoming and ougoing behavior.",
+    "application_ownedInterfaces_outgoing": "Outgoing",
+    "application_ownedInterfaces_biDirectional": "Bi-directional",
+    "application_ownedInterfaces_directionPlaceholder": "Select direction",
+    "application_ownedInterfaces_direction": "Direction",
+    "application_ownedInterfaces_volumetry": "Volumetry",
+    "application_ownedInterfaces_frequence": "frequence",
+    "application_ownedInterfaces_daily": "Daily",
+    "application_ownedInterfaces_hourly": "Hourly",
+    "application_ownedInterfaces_weekly": "Weekly",
+    "application_ownedInterfaces_monthly": "Monthly",
+    "application_ownedInterfaces_yearly": "Yearly",
+    "application_ownedInterfaces_onDemand": "On demand",
+    "application_ownedInterfaces_realTime": "real-time",
+    "application_ownedInterfaces_interfaceHasBeenAdded": "Interface has been added.",
+    "application_ownedInterfaces_interfaceHasNotBeenAdded": "Interface hasn't been added.",
+    "application_ownedInterfaces_provideANewInterface": "Provide a new interface",
+    "application_ownedInterfaces_provideANewInterfaceDescription": "Create a new interface provide by application {{ name }}",
+    "application_ownedInterfaces_updateInterface": "Update interface {{name}}",
+    "application_ownedInterfaces_updateInterfaceDescription": "Update interface {{ interfaceName }} provide by application {{ name }}",
+    "application_ownedInterfaces_addInterface": "Add interface",
+    "application_ownedInterfaces_dataObject": "Data object",
+    "application_ownedInterfaces_itComponent": "It component",
+    "application_ownedInterfaces_placeholderNameFilter": "Filter interfaces..."
 }
